maze.lessons.maze.island.IslandMaze.scala.error
Escaper:11: error: ')' expected but '}' found.
override def run() {while (getY()!=0) {setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (aMurN() || getY() !=0 {garM()}};while (!estSurBiscuit()) {garM()};prendBiscuit()} 
                                                                                                                                           ^